Fixed spacing problems for 3/4 high velocity work sections (only technology had proper spacing before)

--- a/css/styles.css
+++ b/css/styles.css
@@ -395,11 +395,16 @@ p {
 
 }
 
-.technology .bbe-thumbnail {
+.technology {
     float: left;
+}
+
+.bbe-thumbnail {
+
     margin-bottom: 50px;
     margin-top: 25px;
 }
+
 
 /* High velocity */
 
